<resources>
    <string name="app_name">Recurring Reminder</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="startTimeText">Start time</string>
    <string name="startTimeDisplay">00:00</string>
    <string name="intervalText">Interval</string>
    <string name="daysText">Days</string>
    <string name="hoursText">Hours</string>
    <string name="minutesText">Minutes</string>
    <string name="zero">0</string>
    <string name="messageText">Message</string>
    <string name="messageHint">Your text here</string>
    <string name="addToDbButton">Add</string>
    <string name="channel_name">ReminderNotificationChannel</string>
    <string name="channel_description">channel for reminders notifications</string>
    <string name="valuePlaceholder">-1</string>
    <string name="intervalMinutesText">Minutes</string>
    <string name="intervalHoursText">Hours</string>
    <string name="intervalDaysText">Days</string>
    <string name="startTodayCheckbox">start today</string>
</resources>
